--- a/src/style/style_light.qss
+++ b/src/style/style_light.qss
@@ -1,4 +1,5 @@
-MyMainWindow {
+MyMainWindow,
+MySettingWindow {
     background: #F5F5F5;
 }
 
@@ -36,5 +37,29 @@ MyMainWindow {
 }
 
 #separator {
-    background: red;
+    background: #D8D8D8;
+}
+
+/* 设置 */
+
+#settingTitle {
+    font-size: 16px;
+    color: #000;
+}
+
+#cardTitleLabel {
+    font-size: 14px;
+    /* font-weight: bold; */
+    color: #000;
+}
+
+#cardInfoLabel {
+    font-size: 12px;
+    color: #777;
+}
+
+#cardFrame {
+    background: #FFF;
+    border: 1px solid #EDEDED;
+    border-radius: 8px;
 }
