--- a/src/style/style_light.qss
+++ b/src/style/style_light.qss
@@ -63,3 +63,9 @@ MySettingWindow {
     border: 1px solid #EDEDED;
     border-radius: 8px;
 }
+
+/* Info */
+
+#versionLabel {
+    color: #777;
+}
