--- a/src/style/style_dark.qss
+++ b/src/style/style_dark.qss
@@ -1,49 +1,49 @@
 MyMainWindow,
 MyAboutWindow,
 MySettingWindow {
-    background: #F5F5F5;
+    background: #1A1A1A;
 }
 
 #titleLabel {
     font-size: 32px;
-    color: #444;
+    color: #EBEBEB;
 }
 
 #subtitleLabel {
     font-size: 13px;
-    color: #555;
+    color: #AAA;
 }
 
 #separator {
-    background: #D8D8D8;
+    background: #444;
 }
 
 /* 设置 */
 
 #settingTitle {
     font-size: 16px;
-    color: #000;
+    color: #EBEBEB;
 }
 
 #cardTitleLabel {
     font-size: 14px;
     /* font-weight: bold; */
-    color: #000;
+    color: #EBEBEB;
 }
 
 #cardInfoLabel {
     font-size: 12px;
-    color: #777;
+    color: #888;
 }
 
 #cardFrame {
-    background: #FFF;
-    border: 1px solid #EDEDED;
+    background: #242424;
+    border: 1px solid #333;
     border-radius: 8px;
 }
 
 /* Info */
 
 #versionLabel {
-    color: #777;
+    color: #888;
 }
