--- a/src/style/style_light.qss
+++ b/src/style/style_light.qss
@@ -42,6 +42,12 @@ MySettingWindow {
     border-radius: 8px;
 }
 
+QScrollArea,
+#scrollWidget {
+    background: transparent;
+    border: none;
+}
+
 /* Info */
 
 #versionLabel {
